# mcupdate

./: .gitignore  Cargo.toml
src/: main.rs
