[package]
name = "mcupdate"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
openssl = { version = "0.10.71", features = ["vendored"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
